--- a/env/env.yml
+++ b/env/env.yml
@@ -1,4 +1,13 @@
 
 # env/ は gitignore に追加
 # 環境変数や認証情報を設定
-
+users:
+ - name: TESTUSER1
+   email: TESTUSER1_VALUE
+   column: 111
+ - name: TESTUSER2
+   email: TESTUSER2_VALUE
+   column: 222
+ - name: TESTUSER3
+   email: TESTUSER3_VALUE
+   column: 333
